<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ticketer</string>
    <string name="empty_string"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_log_in">Log in</string>
    <string name="image_resource">Image resource.</string>
    <string name="label_username">User name</string>
    <string name="label_password">Password</string>
    
    <string name="status_dashboard">Dashboard</string>
    <string name="status_events">Events</string>

</resources>
