<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.ticketer.activity.MainActivity" >
    
      <ImageView
          android:id="@+id/imageView1"
          android:layout_width="230dp"
          android:layout_height="150dp"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="50dp"
          android:contentDescription="@string/image_resource"
          android:src="@drawable/top_big" />

    <EditText
        android:id="@+id/input_username"
        style="@style/BigInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:hint="@string/label_username"/>

    <EditText
        android:id="@+id/input_password"
        style="@style/BigInput"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/label_password"/>
    
    <Button
        android:id="@+id/button_login"
        style="@style/BigButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_log_in" 
        android:onClick="loginButtonAction"/>

    <TextView
        android:id="@+id/label_error"
        style="@style/ErrorLabel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_string" />
    

</RelativeLayout>